server/k8s/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backend-ingress
    annotations:
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
    tls:
        - hosts:
              - backend.bikramtuladhar.xyz.np
          secretName: backend-real-tls-secret
    rules:
        - host: backend.bikramtuladhar.xyz.np
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 8080
    ingressClassName: nginx
